# for-sale

./: .gitignore  README.md  main.py  pyproject.toml
agents/: manual.py  simple.py
game/: __init__.py  core.py  engine.py  state.py
